# video_prop_networks

./: .gitmodules  LICENSE.txt  README.md
lib/davis/: AUTHORS  CMakeLists.txt  LICENSE  README.md  configure.sh
lib/davis/cpp/: CMakeLists.txt
lib/davis/cpp/Boost.NumPy/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/davis/cpp/Boost.NumPy/libs/numpy/doc/_build/doctrees/: cmakeBuild.doctree  environment.pickle  index.doctree
lib/davis/cpp/Boost.NumPy/libs/numpy/doc/_build/html/: .buildinfo  cmakeBuild.html  (+4 more)
lib/davis/cpp/Boost.NumPy/libs/numpy/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake  numpy.cpp
lib/davis/cpp/polycont/: python.cpp
lib/davis/cpp/polycont/cpp/: clockwise_sort.hpp  containers.hpp  in_out_sort.hpp  io.hpp  lines2jordan.hpp  mask2poly.hpp  mask2polycont.hpp  move2junctions.hpp  poly_compare.hpp  simplify.hpp
lib/davis/cpp/polycont/cpp/examples/: example_polycont.cpp  example_polycont.darwin15  example_polycont.linux-gnu  test_io.cpp  test_io.darwin15  test_io.linux-gnu  test_io.pcont
lib/davis/data/: db_benchmark.yml  get_davis.sh
lib/davis/python/: requirements.txt
lib/davis/python/experiments/: eval_all.py  eval_attributes.py  eval_sequences.py  eval_simple.py  eval_train_test.py
lib/davis/python/lib/davis/: __init__.py  config.py  logger.py  parallel.py  timer.py
lib/davis/python/lib/davis/dataset/: __init__.py  loader.py  utils.py
lib/davis/python/lib/davis/measures/: __init__.py  f_boundary.py  jaccard.py  t_stability.py
lib/davis/python/tools/: eval.py  eval_view.py  list_techniques.py
(+130 files in other folders)
